Ensure link does not reduce in size on smaller screens
When testing on smaller screens such as mobile devices, the link was very small.

This could make it harder to press.

--- a/app/assets/stylesheets/components/_back-link.scss
+++ b/app/assets/stylesheets/components/_back-link.scss
@@ -5,7 +5,8 @@
   display: inline-block;
   margin-top: $app-spacing-scale-3;
   margin-bottom: $app-spacing-scale-3;
-  @include core-16;
+  font-size: 16px;
+  line-height: 1.25;
 
   text-decoration: none;
   border-bottom: 1px solid currentColor;
